--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,9 @@ COPY . .
 RUN yarn build
 
 FROM nginx:1.21-alpine
+# Copy built React app
 COPY --from=build /app/build /usr/share/nginx/html
+# Copy custom Nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
