--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen $PORT;  # Render uses dynamic ports
+    server_name _;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -8,8 +8,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Update backend URL to your Render backend service URL
     location /api {
-        proxy_pass http://backend:5000;
+        proxy_pass https://your-backend-service.onrender.com;
         proxy_set_header Host $host;
     }
 }
