--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen $PORT;  # Render uses dynamic ports
+    listen $PORT;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -8,9 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Update backend URL to your Render backend service URL
     location /api {
-        proxy_pass https://your-backend-service.onrender.com;
+        proxy_pass https://drs-backend-goic.onrender.com;
         proxy_set_header Host $host;
     }
 }
