--- a/flask-engine/Dockerfile
+++ b/flask-engine/Dockerfile
@@ -1,17 +1,19 @@
 FROM python:3.9-slim
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    pkg-config \
-    default-libmysqlclient-dev \
-    build-essential \
+    gcc \
+    python3-dev \
+    libpq-dev \
     postgresql-client \
-    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application
 COPY . .
-EXPOSE 5000
-CMD ["flask", "run", "--host=0.0.0.0"]
+
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
