--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api {
-        proxy_pass https://drs-backend-goic.onrender.com;
+        proxy_pass https://drs-backend-ahhh.onrender.com;
         proxy_set_header Host $host;
     }
 }
