--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -17,14 +17,12 @@ RUN yarn build
 # Stage 2: Serve with Nginx
 FROM nginx:1.21-alpine
 
-# Remove default nginx config
+# Install envsubst for template processing
+RUN apk add --no-cache bash
 RUN rm -rf /etc/nginx/conf.d/default.conf
-
-# Copy built assets
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Copy custom Nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
+# Copy the nginx config template
+COPY nginx.conf /etc/nginx/templates/default.conf.template
+EXPOSE $PORT
 CMD ["nginx", "-g", "daemon off;"]
+
