--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen $PORT;
+    listen ${{PORT}};
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -11,5 +11,7 @@ server {
     location /api {
         proxy_pass https://drs-backend-ahhh.onrender.com;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
