--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=postgres
       - DATABASE_NAME=drs_db
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/drs_db
     depends_on:
       - db
     volumes:
@@ -29,7 +30,7 @@ services:
       - app-network
 
   db:
-    image: postgres:16
+    image: postgres:17
     ports:
       - "5433:5432"
     environment:
