--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen ${PORT};
+    listen 80;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -10,6 +10,18 @@ server {
 
     location /api {
         proxy_pass https://drs-backend-ahhh.onrender.com;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    
+    location /socket.io/ {
+        proxy_pass https://drs-backend-ahhh.onrender.com;
+        proxy_http_version 1.1;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
